ci(*): add .goreleaser

--- a/.gitignore
+++ b/.gitignore
@@ -217,3 +217,5 @@ $RECYCLE.BIN/
 terrapack
 # End of https://www.toptal.com/developers/gitignore/api/git,macos,linux,windows,visualstudiocode,goland,go
 
+
+dist/
